--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .main-body {
-    background-color: #F28487;
+    background-color: #e5f284;
     color: white;
     height: calc(100vh - 64px);
 }
